1.6.1.dev0
 * Add a randomized delay to the sample systemd timer to spread out the load on a server.

1.6.0
 * #381: BREAKING: Greatly simplify configuration file reuse by deep merging when including common
   configuration. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/make-per-application-backups/#include-merging
 * #473: BREAKING: Instead of executing "before" command hooks before all borgmatic actions run (and
   "after" hooks after), execute these hooks right before/after the corresponding action. E.g.,
   "before_check" now runs immediately before the "check" action. This better supports running
   timing-sensitive tasks like pausing containers. Side effect: before/after command hooks now run
   once for each configured repository instead of once per configuration file. Additionally, the
   "repositories" interpolated variable has been changed to "repository", containing the path to the
   current repository for the hook. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/add-preparation-and-cleanup-steps-to-backups/
 * #513: Add mention of sudo's "secure_path" option to borgmatic installation documentation.
 * #515: Fix "borgmatic borg key ..." to pass parameters to Borg in the correct order.
 * #516: Fix handling of TERM signal to exit borgmatic, not just forward the signal to Borg.
 * #517: Fix borgmatic exit code (so it's zero) when initial Borg calls fail but later retries
   succeed.
 * Change Healthchecks logs truncation size from 10k bytes to 100k bytes, corresponding to that
   same change on Healthchecks.io.

1.5.24
 * #431: Add "working_directory" option to support source directories with relative paths.
 * #444: When loading a configuration file that is unreadable due to file permissions, warn instead
   of erroring. This supports running borgmatic as a non-root user with configuration in ~/.config
   even if there is an unreadable global configuration file in /etc.